--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Alon Niv <oakfang@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "koa": "^2.5.3",
-    "koa-body": "^4.0.4",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "npm": "^6.4.1",
+    "pacote": "^9.1.0",
+    "rimraf": "^2.6.2"
   }
 }
