--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.11",
     "npm": "^6.4.1",
     "pacote": "^9.1.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "uuid": "^3.3.2"
   }
 }
