--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.1",
+    "dev-null": "^0.1.1",
     "lodash": "^4.17.11",
     "npm": "^6.4.1",
     "pacote": "^9.1.0",
     "rimraf": "^2.6.2",
     "time-stamp": "^2.1.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "yargs": "^12.0.2"
   },
   "scripts": {
-    "start": "node ."
+    "start": "node bin/cli.js"
+  },
+  "bin": {
+    "fofx": "bin/cli.js"
   }
 }
