Extract dep modules onto argv

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chalk": "^2.4.1",
     "dev-null": "^0.1.1",
     "lodash": "^4.17.11",
+    "mkdirp": "^0.5.1",
     "npm": "^6.4.1",
     "pacote": "^9.1.0",
     "rimraf": "^2.6.2",
