--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,4 @@ typings/
 # next.js build output
 .next
 
-cache
-plugins/node_modules
-nanos/node_modules
-plugins/package-lock.json
-nanos/package-lock.json
+modules/
