--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "fofx",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "index.js",
   "repository": "https://github.com/functzia/fofx.git",
   "author": "Alon Niv <oakfang@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "async-redis": "^1.1.4",
     "chalk": "^2.4.1",
     "dev-null": "^0.1.1",
     "lodash": "^4.17.11",
