--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "fofx",
-  "version": "1.3.0",
+  "name": "@fofx/core",
+  "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/functzia/fofx.git",
   "author": "Alon Niv <oakfang@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "async-redis": "^1.1.4",
+    "@fofx/install": "^1.0.0",
+    "@fofx/queue": "^1.1.1",
     "chalk": "^2.4.1",
-    "dev-null": "^0.1.1",
-    "lodash": "^4.17.11",
-    "mkdirp": "^0.5.1",
-    "npm": "^6.4.1",
-    "pacote": "^9.1.0",
-    "redis-connection-string": "^1.0.4",
-    "rimraf": "^2.6.2",
-    "rsmq": "^0.9.2",
-    "rsmq-worker": "^0.5.2",
     "time-stamp": "^2.1.0",
     "uuid": "^3.3.2",
     "yargs": "^12.0.2"
