--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "@fofx/core",
+  "name": "@fofx/cli",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/functzia/fofx.git",
   "author": "Alon Niv <oakfang@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@fofx/install": "^1.0.0",
-    "@fofx/queue": "^1.1.1",
-    "chalk": "^2.4.1",
-    "time-stamp": "^2.1.0",
-    "uuid": "^3.3.2",
+    "@fofx/core": "^2.0.0",
+    "@fofx/logger": "^1.0.0",
     "yargs": "^12.0.2"
   },
   "scripts": {
